--- a/main.html
+++ b/main.html
@@ -10,6 +10,21 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<header>
+		<h1>Gadar 2</h1>
+		<nav>
+			<ul>
+				<li><a href="#" id="nav-actor">Sunny Deol</a></li>
+				<li><a href="#" id="nav-quote">Never stop at any phase of your life to prove yourself</a></li>
+				<summary></summary>
+			</ul>
+		</nav>
+	</header>
+
+	<aside>IMDb rating</aside>
+	<footer>
+		Produced by: RR Rajamouli
+	</footer>
 
 </body>
 
