--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
     </nav>
     <section id="summary">
         <h2>Summary</h2>
-        <p>The Shawshank Redemption is a 1994 American drama film written and directed by Frank Darabont, based on the 1982 Stephen King novella Rita Hayworth and Shawshank Redemption. It tells the story of banker Andy Dufresne, who is sentenced to life in Shawshank State Penitentiary for the murder of his wife and her lover, despite his claims of innocence. Over the following two decades, he befriends a fellow prisoner, contraband smuggler Ellis "Red" Redding, and becomes instrumental in a money-laundering operation led by the prison warden Samuel Norton.</p>
+        <p>The Shawshank Redemption summary is aeration led by the prison warden Samuel Norton.</p>
     </section>
     <section id="actor">
         <h2>Actors</h2>
